fix image size on mobile to have aspect ratio of 1.5 desktop and Play Lesson

--- a/app/styles/_homepage.scss
+++ b/app/styles/_homepage.scss
@@ -142,12 +142,10 @@
       text-align: center;
       z-index: 0;
       &, img {
-        /*height: 120px;
-        width: 180px;*/
-        height: auto;
+        height: 220px;
       }
       i {
-        font-size: 240px;
+        font-size: 220px;
       }
     }
     .title {
