--- a/app/styles/_lessonIntro.scss
+++ b/app/styles/_lessonIntro.scss
@@ -180,10 +180,10 @@
             text-align: center;
             z-index: 0;
             &, img {
-              height: 200px;
+              height: 240px;
             }
             i {
-                font-size: 200px;
+                font-size: 240px;
                 color: #296CA1;
                 &:before {
                     margin-left: 45px;
@@ -193,7 +193,7 @@
         .start-lesson {
             position: relative;
             width: 30px;
-            margin: -134px auto 76px;
+            margin: -149px auto 101px;
             i {
                 font-size: 60px;
             }
@@ -201,7 +201,7 @@
         & > .action-items {
             position: relative; // to bring the icons in front of the image
             float: right;
-            margin-top: -182px;
+            margin-top: -213px;
             margin-right: 10px;
             font-size: 20px;
             text-align: center;
@@ -225,7 +225,7 @@
             z-index: 0;
             position: relative;
             display: block;
-            margin-top: -182px;
+            margin-top: -213px;
             margin-left: 20px;
             float: left;
             width: 50px;
